--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,7 @@
 .studio-main{
     background-color: #ffffff;
     color: var(--main-text-color);
+    font-family: Roboto, sans-serif;
 }
 .link{
     text-decoration: none;
@@ -31,6 +32,11 @@
 
 .logo{
     color: #000000;
+    font-family: Raleway, sans-serif;
+font-size: 26px;
+font-weight: 700;
+line-height: 1,2;
+letter-spacing: 0.03em;
 }
 .web-logo{
     color:var(--accent-color);
@@ -46,6 +52,12 @@
 
 .site-nav .link{
     color: var(--title-text-color);
+    font-family: Roboto, sans-serif;
+font-size: 14px;
+font-weight: 500;
+line-height: 1.2;
+letter-spacing: 0.02em;
+
 }
 
 .site-nav .link:hover, 
@@ -58,6 +70,13 @@
 
 .contact-link{
     color: var(--main-text-color);
+    font-family: Roboto, sans-serif;
+font-size: 14px;
+font-weight: 500;
+line-height: 1.2;
+letter-spacing: 0.02em;
+
+
 }
 
 /* styles for headers contacts */
@@ -72,50 +91,119 @@
 }
 .hero-title{
 color: var(--white-color);
+font-family: Roboto, sans-serif;
+font-size: 44px;
+font-weight: 900;
+line-height: 1.4;
+letter-spacing: 0.06em;
+text-align: center;
+
 
 }
 
 .hero-button{
     color: var(--white-color);
     background-color: var(--accent-color);
+    font-family: Roboto, sans-serif;
+font-size: 16px;
+font-weight: 700;
+line-height: 1.9;
+letter-spacing: 0.06em;
+text-align: center;
+
 }
 
 /* Section features */
 
 .features-title{
     color: var(--title-text-color);
+    font-family: Roboto, sans-serif;
+font-size: 14px;
+font-weight: 700;
+line-height: 1.2;
+letter-spacing: 0.03em;
+text-align: left;
+
 }
 
 .features-text{
     color: var(--main-text-color);
+    font-family: Roboto,sans-serif;
+font-size: 14px;
+line-height: 1.7;
+letter-spacing: 0.03em;
+text-align: left;
+
 }
 
 /* work section */
 
 .work-title{
     color: var(--title-text-color);
+    font-family: Roboto, sans-serif;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+   
+    
 }
 
 /* team sectioin  */
 
 .team-title{
     color: var(--title-text-color);
-
+    font-family: Roboto, sans-serif;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+   
+    
 }
 
 .team-member{
     color: var(--title-text-color);
+    font-family: Roboto, sans-serif;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.2;
+letter-spacing: 0.03em;
+
+
 }
-.team-text{
+.team-job{
     color: var(--main-text-color);
+    font-family: Roboto, sans-serif;
+font-size: 16px;
+font-weight: 400;
+line-height: 1.2;
+letter-spacing: 0.03em;
+
+
 }
 
 /* Styles for footer */
 .footer-logo{
     color: var(--white-color);
+    font-family: Raleway, sans-serif;
+font-size: 26px;
+font-weight: 700;
+line-height: 1,2;
+letter-spacing: 0.03em;
 }
 .footer{
     background-color: #2F303A;
+    
+}
+.address{
+    font-family: Roboto, sans-serif;
+font-size: 14px;
+font-weight: 400;
+line-height: 1.7;
+letter-spacing: 0.03em;
+
+
 }
 .address-street{
     color: var(--white-color);
@@ -128,17 +216,39 @@ color: var(--white-color);
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
 /* Portfolio Page */
+
 
 .portfolio-main{
 background-color: var(--white-color);
+font-family: Roboto, sans-serif;
 }
 
 
 /* Portfolio navigation  */
+
+
 .nav-button{
 background-color: var(--button-color);
 color: var(--title-text-color);
+font-family: Roboto, sans-serif;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.6;
+letter-spacing: 0.03em;
+text-align: center;
 
 }
 
@@ -152,7 +262,24 @@ color: var(--title-text-color);
 
 .portfolio-title{
 color: var(--title-text-color);
+font-family: Roboto, sans-serif;
+font-size: 18px;
+font-weight: 700;
+line-height: 2;
+letter-spacing: 0.06em;
+
+
 }
 .portfolio-text{
 color: var(--main-text-color);
+font-family: Roboto;
+font-size: 16px;
+line-height: 1.9;
+letter-spacing: 0.03em;
+
+
 }
+
+
+
+
