--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@
 /* Studio css */
 
 body {
-  background-color: #ffffff;
+  background-color: var(--white-color);
   color: var(--main-text-color);
   font-family: Roboto, sans-serif;
   font-size: 14px;
@@ -35,7 +35,7 @@ body {
   font-family: Raleway, sans-serif;
   font-size: 26px;
   font-weight: 700;
-  line-height: 1, 2;
+  line-height: 1 2;
   letter-spacing: 0.03em;
 }
 .web-logo {
@@ -177,7 +177,7 @@ body {
   font-family: Raleway, sans-serif;
   font-size: 26px;
   font-weight: 700;
-  line-height: 1, 2;
+  line-height: 1 2;
   letter-spacing: 0.03em;
 }
 .footer {
@@ -186,12 +186,13 @@ body {
 .address {
   line-height: 1.7;
   letter-spacing: 0.03em;
+  font-style: normal;
 }
 .address-street {
   color: var(--white-color);
 }
 .address-contact {
-  color: #ffffff;
+  color: var(--white-color);
 }
 .address-contact:hover {
   color: var(--accent-color);
@@ -219,7 +220,8 @@ body {
 .nav-button:focus {
   background-color: var(--accent-color);
   color: var(--white-color);
-  box-shadow: 0px 0px 3px 0px #c8c8c8;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* portfolio gallery */
